--- a/BSITCapstone.vbproj
+++ b/BSITCapstone.vbproj
@@ -54,7 +54,7 @@
     <Reference Include="DevExpress.Utils.v18.1, Version=18.1.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="DevExpress.XtraEditors.v18.1, Version=18.1.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="Guna.UI2">
-      <HintPath>D:\Compressed\Extracted\azadeducation.in_Guna_UI_Framework_Ultimate_v2.0.0.1\_Getintopc.com_Guna_UI_Framework_Ultimate_v2.0.0.1\Guna_UI_Framework_Ultimate_v2.0.0.1\Guna.UI-Framework-Lib-master\Guna.UI2 WinForms\.net 4.0\Guna.UI2.dll</HintPath>
+      <HintPath>DLL\Guna.UI2.dll</HintPath>
     </Reference>
     <Reference Include="Softgroup.NetResize">
       <HintPath>..\..\..\..\..\Program Files (x86)\Softgroup .Net Forms Resize\Softgroup.NetResize.dll</HintPath>
@@ -88,6 +88,12 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AddCases.Designer.vb">
+      <DependentUpon>AddCases.vb</DependentUpon>
+    </Compile>
+    <Compile Include="AddCases.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="AddNewResident.Designer.vb">
       <DependentUpon>AddNewResident.vb</DependentUpon>
     </Compile>
@@ -100,22 +106,34 @@
     <Compile Include="Dashboard.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FormDocument.Designer.vb">
-      <DependentUpon>FormDocument.vb</DependentUpon>
+    <Compile Include="CovidCases.Designer.vb">
+      <DependentUpon>CovidCases.vb</DependentUpon>
     </Compile>
-    <Compile Include="FormDocument.vb">
+    <Compile Include="CovidCases.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="BlotterRecords.Designer.vb">
+      <DependentUpon>BlotterRecords.vb</DependentUpon>
+    </Compile>
+    <Compile Include="BlotterRecords.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="useraccount.Designer.vb">
+      <DependentUpon>useraccount.vb</DependentUpon>
+    </Compile>
+    <Compile Include="useraccount.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="residents.Designer.vb">
+      <DependentUpon>residents.vb</DependentUpon>
+    </Compile>
+    <Compile Include="residents.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="PrintResidentInformation.Designer.vb">
       <DependentUpon>PrintResidentInformation.vb</DependentUpon>
     </Compile>
     <Compile Include="PrintResidentInformation.vb">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="ManageResidents.Designer.vb">
-      <DependentUpon>ManageResidents.vb</DependentUpon>
-    </Compile>
-    <Compile Include="ManageResidents.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="HomeContent.Designer.vb">
@@ -149,20 +167,29 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="AddCases.resx">
+      <DependentUpon>AddCases.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="AddNewResident.resx">
       <DependentUpon>AddNewResident.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CovidCases.resx">
+      <DependentUpon>CovidCases.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Dashboard.resx">
       <DependentUpon>Dashboard.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FormDocument.resx">
-      <DependentUpon>FormDocument.vb</DependentUpon>
+    <EmbeddedResource Include="BlotterRecords.resx">
+      <DependentUpon>BlotterRecords.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="residents.resx">
+      <DependentUpon>residents.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="useraccount.resx">
+      <DependentUpon>useraccount.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="PrintResidentInformation.resx">
       <DependentUpon>PrintResidentInformation.vb</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="ManageResidents.resx">
-      <DependentUpon>ManageResidents.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="HomeContent.resx">
       <DependentUpon>HomeContent.vb</DependentUpon>
