--- a/BSITCapstone.vbproj
+++ b/BSITCapstone.vbproj
@@ -118,6 +118,12 @@
     <Compile Include="BlotterRecords.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="FormDocument.Designer.vb">
+      <DependentUpon>FormDocument.vb</DependentUpon>
+    </Compile>
+    <Compile Include="FormDocument.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="useraccount.Designer.vb">
       <DependentUpon>useraccount.vb</DependentUpon>
     </Compile>
@@ -181,6 +187,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="BlotterRecords.resx">
       <DependentUpon>BlotterRecords.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormDocument.resx">
+      <DependentUpon>FormDocument.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="residents.resx">
       <DependentUpon>residents.vb</DependentUpon>
