--- a/BSITCapstone.vbproj
+++ b/BSITCapstone.vbproj
@@ -100,6 +100,18 @@
     <Compile Include="AddNewResident.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="BCHistory.Designer.vb">
+      <DependentUpon>BCHistory.vb</DependentUpon>
+    </Compile>
+    <Compile Include="BCHistory.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="BClearance.Designer.vb">
+      <DependentUpon>BClearance.vb</DependentUpon>
+    </Compile>
+    <Compile Include="BClearance.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Dashboard.Designer.vb">
       <DependentUpon>Dashboard.vb</DependentUpon>
     </Compile>
@@ -178,6 +190,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AddNewResident.resx">
       <DependentUpon>AddNewResident.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="BCHistory.resx">
+      <DependentUpon>BCHistory.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="BClearance.resx">
+      <DependentUpon>BClearance.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="CovidCases.resx">
       <DependentUpon>CovidCases.vb</DependentUpon>
