--- a/My Project/Settings.settings
+++ b/My Project/Settings.settings
@@ -3,10 +3,10 @@
   <Profiles />
   <Settings>
     <Setting Name="strCon" Type="System.String" Scope="User">
-      <Value Profile="(Default)">Provider=Microsoft.Jet.OLEDB.4.0;Data Source=C:\Capstone\Dbase\IMSDbase.mdb</Value>
+      <Value Profile="(Default)">Provider=Microsoft.Jet.OLEDB.4.0;Data Source=C:\Capstone\Dbase\BSMIMS.mdb</Value>
     </Setting>
     <Setting Name="IMSDbaseConnectionString" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">Provider=Microsoft.Jet.OLEDB.4.0;Data Source=C:\Capstone\Dbase\IMSDbase.mdb</Value>
+      <Value Profile="(Default)">Provider=Microsoft.Jet.OLEDB.4.0;Data Source=C:\Capstone\Dbase\BSMIMS.mdb</Value>
     </Setting>
   </Settings>
 </SettingsFile>
