--- a/bin/x86/Debug/BSITCapstone.exe.config
+++ b/bin/x86/Debug/BSITCapstone.exe.config
@@ -15,14 +15,14 @@
     <userSettings>
         <BSITCapstone.My.MySettings>
             <setting name="strCon" serializeAs="String">
-                <value>Provider=Microsoft.Jet.OLEDB.4.0;Data Source=C:\Capstone\Dbase\IMSDbase.mdb</value>
+                <value>Provider=Microsoft.Jet.OLEDB.4.0;Data Source=C:\Capstone\Dbase\BSMIMS.mdb</value>
             </setting>
         </BSITCapstone.My.MySettings>
     </userSettings>
     <applicationSettings>
         <BSITCapstone.My.MySettings>
             <setting name="IMSDbaseConnectionString" serializeAs="String">
-                <value>Provider=Microsoft.Jet.OLEDB.4.0;Data Source=C:\Capstone\Dbase\IMSDbase.mdb</value>
+                <value>Provider=Microsoft.Jet.OLEDB.4.0;Data Source=C:\Capstone\Dbase\BSMIMS.mdb</value>
             </setting>
         </BSITCapstone.My.MySettings>
     </applicationSettings>
